# IndependentEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Independent.sln  README.md  premake5.lua
Independent/: CMakeLists.txt  Independent.vcxproj  Independent.vcxproj.filters
Independent/src/: Independent.h  Test.cpp  Test.h  idpdpch.cpp  idpdpch.h
Independent/src/Forge/: CMakeLists.txt
Independent/src/Independent/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
Independent/src/Independent/Core/include/containers/: Map.h  Pair.h  Queue.h  Set.h  SharedPtr.h  String.h  Tuple.h  UniquePtr.h  UnorderedMap.h  UnorderedSet.h  Vector.h
Independent/src/Independent/Core/include/debug/: Instrumentor.h
Independent/src/Independent/Core/include/memory/: BaseMemoryResource.h  MallocMemoryResource.h  StackMemoryResource.h
Independent/src/Independent/Core/include/utils/: Timestep.h
Independent/src/Independent/Core/src/memory/: MallocMemoryResource.cpp  StackMemoryResource.cpp
Independent/src/Independent/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Independent/src/Independent/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Independent/src/Independent/Render/include/: RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h
Independent/src/Independent/Render/include/buffer/: Buffer.h
Independent/src/Independent/Render/include/camera/: CameraBase.h  CameraManager.h  OrthographicCamera.h  OrthographicCameraController.h
Independent/src/Independent/Render/include/shader/: Shader.h
Independent/src/Independent/Render/include/texture/: Texture.h
Independent/src/Independent/Render/include/vertex_array/: VertexArray.h
Independent/src/Independent/Render/src/: RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp
Independent/src/Independent/Render/src/buffer/: Buffer.cpp
Independent/src/Independent/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  Renderer.cpp  Renderer.h  Shader.cpp  VertexArray.cpp  VertexArray.h
Independent/src/Independent/SystemFiles/include/: Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  Window.h
Independent/src/Independent/SystemFiles/src/: Layer.cpp  LayerStack.cpp  Log.cpp
Independent/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Independent/src/Platform/OpenGL/include/: OpenGLBuffer.h  OpenGLContext.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h
Independent/src/Platform/OpenGL/src/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
Independent/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Independent/src/Platform/Windows/include/: WindowsInput.h  WindowsWindow.h
Independent/src/Platform/Windows/src/: WindowsInput.cpp  WindowsWindow.cpp
TestingProject/: CMakeLists.txt  TestingProject.vcxproj  imgui.ini
TestingProject/assets/shaders/: FlappyBirdCloneShader.glsl  FlatColor.glsl  Texture.glsl
TestingProject/src/: TestingSandbox2D.cpp  TestingSandbox2D.h  TestingSandboxApp.cpp
TestingProject/src/FlappyBirdClone/: GameLayer.cpp  GameLayer.h  Level.cpp  Level.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h
(+44 files in other folders)
